Bugfixes with != instead of equals and default toString calls